Operator Precedence - Add missing `??=`
Patch by SpacePossum.

Closes php/doc-en#47.

git-svn-id: https://svn.php.net/repository/phpdoc/en/trunk@349236 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/operators.xml
+++ b/language/operators.xml
@@ -245,6 +245,7 @@
          <literal>^=</literal> 
          <literal>&lt;&lt;=</literal> 
          <literal>&gt;&gt;=</literal>
+         <literal>??=</literal>
         </entry>
         <entry>
          <link linkend="language.operators.assignment">assignment</link>
