--- a/language/control-structures.xml
+++ b/language/control-structures.xml
@@ -35,6 +35,10 @@
  &language.control-structures.require-once;
  &language.control-structures.include-once;
  &language.control-structures.goto;
+ &function.array;
+ &function.list;
+ &function.echo;
+ &function.eval;
 
 </chapter>
 
