--- a/language/control-structures.xml
+++ b/language/control-structures.xml
@@ -35,10 +35,10 @@
  &language.control-structures.require-once;
  &language.control-structures.include-once;
  &language.control-structures.goto;
- &function.array;
- &function.list;
- &function.echo;
- &function.eval;
+ &reference.arrays.functions.array;
+ &reference.arrays.functions.list;
+ &reference.strings.functions.echo;
+ &reference.misc.functions.eval;
 
 </chapter>
 
