--- a/language/control-structures.xml
+++ b/language/control-structures.xml
@@ -35,8 +35,8 @@
  &language.control-structures.require-once;
  &language.control-structures.include-once;
  &language.control-structures.goto;
- &reference.arrays.functions.array;
- &reference.arrays.functions.list;
+ &reference.array.functions.array;
+ &reference.array.functions.list;
  &reference.strings.functions.echo;
  &reference.misc.functions.eval;
 
