--- a/language/control-structures/include.xml
+++ b/language/control-structures/include.xml
@@ -17,11 +17,11 @@
   isn't found in the <link linkend="ini.include-path">include_path</link>,
   <literal>include</literal> will finally check in the calling script's own
   directory and the current working directory before failing. The
-  <literal>include</literal> construct will emit a
-  <link linkend="errorfunc.constants.errorlevels.e-warning">warning</link> if
+  <literal>include</literal> construct will emit an
+  <constant>E_WARNING</constant> if
   it cannot find a file; this is different behavior from
-  <function>require</function>, which will emit a
-  <link linkend="errorfunc.constants.errorlevels.e-error">fatal error</link>.
+  <function>require</function>, which will emit an
+  <constant>E_ERROR</constant>.
  </simpara>
  <simpara>
   If a path is defined — whether absolute (starting with a drive letter
