Add missing language constructs Take 2
git-svn-id: https://svn.php.net/repository/phpdoc/en/trunk@349318 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/control-structures.xml
+++ b/language/control-structures.xml
@@ -36,6 +36,23 @@
  &language.control-structures.include-once;
  &language.control-structures.goto;
 
+
+<refsect1 role="seealso">
+ &reftitle.seealso;
+ <para>
+  The following are also considered language constructs even though they are
+  referenced under functions in the manual.
+ </para>
+ <para>
+  <simplelist>
+   <member><function>list</function></member>
+   <member><function>array</function></member>
+   <member><function>echo</function></member>
+   <member><function>eval</function></member>
+  </simplelist>
+ </para>
+</refsect1>
+
 </chapter>
 
 <!-- Keep this comment at the end of the file
