Fix build and make desired changes visible
git-svn-id: https://svn.php.net/repository/phpdoc/en/trunk@349319 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/control-structures.xml
+++ b/language/control-structures.xml
@@ -15,6 +15,23 @@
    statement by itself as well. The various statement types are
    described in this chapter.
   </simpara>
+
+  <sect2 role="seealso">
+   &reftitle.seealso;
+   <para>
+    The following are also considered language constructs even though they are
+    referenced under functions in the manual.
+   </para>
+   <para>
+    <simplelist>
+     <member><function>list</function></member>
+     <member><function>array</function></member>
+     <member><function>echo</function></member>
+     <member><function>eval</function></member>
+    </simplelist>
+   </para>
+  </sect2>
+
  </sect1>
 
  &language.control-structures.if;
@@ -35,23 +52,6 @@
  &language.control-structures.require-once;
  &language.control-structures.include-once;
  &language.control-structures.goto;
-
-
-<refsect1 role="seealso">
- &reftitle.seealso;
- <para>
-  The following are also considered language constructs even though they are
-  referenced under functions in the manual.
- </para>
- <para>
-  <simplelist>
-   <member><function>list</function></member>
-   <member><function>array</function></member>
-   <member><function>echo</function></member>
-   <member><function>eval</function></member>
-  </simplelist>
- </para>
-</refsect1>
 
 </chapter>
 
