Remove "nom noms" from eat method in Dog class (thanks salathe)
git-svn-id: https://svn.php.net/repository/phpdoc/en/trunk@349392 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/oop5/variance.xml
+++ b/language/oop5/variance.xml
@@ -161,7 +161,7 @@ abstract class Animal
 class Dog extends Animal
 {
     public function eat(Food $food) {
-        echo $this->name . " nom noms " . get_class($food);
+        echo $this->name . " eats " . get_class($food);
     }
 }
 ]]>
