Fix #79256: Generator::next not behaving as documented
Patch provided by ekin@php.net.

git-svn-id: https://svn.php.net/repository/phpdoc/en/trunk@349409 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/predefined/generator/next.xml
+++ b/language/predefined/generator/next.xml
@@ -14,7 +14,7 @@
    <void />
   </methodsynopsis>
   <para>
-   Calling <methodname>Generator::next</methodname> is equivalent to calling
+   Calling <methodname>Generator::next</methodname> has the same effect as calling
    <methodname>Generator::send</methodname> with &null; as argument.
   </para>
  </refsect1>
