Fix #79302: Support for underscores in numbers not documented
git-svn-id: https://svn.php.net/repository/phpdoc/en/trunk@349427 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/types/float.xml
+++ b/language/types/float.xml
@@ -15,20 +15,21 @@
 $a = 1.234; 
 $b = 1.2e3; 
 $c = 7E-10;
+$d = 1_234.567; // as of PHP 7.4.0
 ?>
 ]]>
   </programlisting>
  </informalexample>
 
  <para>
-  Formally:
+  Formally as of PHP 7.4.0 (previously, underscores have not been allowed):
  </para>
 
  <informalexample>
   <programlisting>
 <![CDATA[
-LNUM          [0-9]+
-DNUM          ([0-9]*[\.]{LNUM}) | ({LNUM}[\.][0-9]*)
+LNUM          [0-9]+(_[0-9]+)*
+DNUM          ([0-9]*(_[0-9]+)*[\.]{LNUM}) | ({LNUM}[\.][0-9]*(_[0-9]+)*)
 EXPONENT_DNUM (({LNUM} | {DNUM}) [eE][+-]? {LNUM})
 ]]>
   </programlisting>
