--- a/language/types/integer.xml
+++ b/language/types/integer.xml
@@ -50,6 +50,11 @@
    To use binary notation precede the number with <literal>0b</literal>.
   </para>
 
+  <para>
+   As of PHP 7.4.0, integer literals may contain underscores (<literal>_</literal>) between digits,
+   for better readability of literals. These underscores are removed by PHP's scanner.
+  </para>
+
   <example>
    <title>Integer literals</title>
    <programlisting role="php">
@@ -59,26 +64,28 @@ $a = 1234; // decimal number
 $a = 0123; // octal number (equivalent to 83 decimal)
 $a = 0x1A; // hexadecimal number (equivalent to 26 decimal)
 $a = 0b11111111; // binary number (equivalent to 255 decimal)
+$a = 1_234_567; // decimal number (as of PHP 7.4.0)
 ?>
 ]]>
    </programlisting>
   </example>
 
   <para>
-   Formally, the structure for <type>integer</type> literals is:
+   Formally, the structure for <type>integer</type> literals is as of PHP 7.4.0
+   (previously, underscores have not been allowed):
   </para>
 
   <informalexample>
    <programlisting>
 <![CDATA[
-decimal     : [1-9][0-9]*
+decimal     : [1-9][0-9]*(_[0-9]+)*
             | 0
 
-hexadecimal : 0[xX][0-9a-fA-F]+
+hexadecimal : 0[xX][0-9a-fA-F]+(_[0-9a-fA-F]+)*
 
-octal       : 0[0-7]+
+octal       : 0[0-7]+(_[0-7]+)*
 
-binary      : 0[bB][01]+
+binary      : 0[bB][01]+(_[01]+)*
 
 integer     : decimal
             | hexadecimal
