--- a/language/predefined/arrayaccess.xml
+++ b/language/predefined/arrayaccess.xml
@@ -45,7 +45,7 @@
     <programlisting role="php">
 <![CDATA[
 <?php
-class obj implements ArrayAccess {
+class Obj implements ArrayAccess {
     private $container = array();
 
     public function __construct() {
@@ -77,7 +77,7 @@ class obj implements ArrayAccess {
     }
 }
 
-$obj = new obj;
+$obj = new Obj;
 
 var_dump(isset($obj["two"]));
 var_dump($obj["two"]);
