Fix #66668: Function names are case-sensitive for chars with codes 127-255
git-svn-id: https://svn.php.net/repository/phpdoc/en/trunk@349655 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/functions.xml
+++ b/language/functions.xml
@@ -126,7 +126,7 @@ bar();
    </simpara>
    <note>
     <simpara>
-     Function names are case-insensitive, though it is usually good form
+     Function names are case-insensitive for the ASCII characters <literal>A</literal> to <literal>Z</literal>, though it is usually good form
      to call functions as they appear in their declaration.
     </simpara>
    </note>   
