Operator Precedence - Add `print`, fix associativity of `instanceof` and unary operators
Patch provided by Guilliam Xavier.

git-svn-id: https://svn.php.net/repository/phpdoc/en/trunk@349661 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/operators.xml
+++ b/language/operators.xml
@@ -78,7 +78,7 @@
       </thead>
       <tbody>
        <row>
-        <entry>non-associative</entry>
+        <entry>(n/a)</entry>
         <entry>
          <literal>clone</literal>
          <literal>new</literal>
@@ -91,7 +91,7 @@
         <entry><link linkend="language.operators.arithmetic">arithmetic</link></entry>
        </row>
        <row>
-        <entry>right</entry>
+        <entry>(n/a)</entry>
         <entry>
          <literal>++</literal> 
          <literal>--</literal> 
@@ -109,14 +109,14 @@
         </entry>
        </row>
        <row>
-        <entry>non-associative</entry>
+        <entry>left</entry>
         <entry><literal>instanceof</literal></entry>
         <entry>
          <link linkend="language.types">types</link>
         </entry>
        </row>
        <row>
-        <entry>right</entry>
+        <entry>(n/a)</entry>
         <entry><literal>!</literal></entry>
         <entry>
          <link linkend="language.operators.logical">logical</link>
@@ -252,18 +252,23 @@
         </entry>
        </row>
        <row>
-        <entry>right</entry>
+        <entry>(n/a)</entry>
         <entry><literal>yield from</literal></entry>
         <entry>
          <link linkend="control-structures.yield.from">yield from</link>
         </entry>
        </row>
        <row>
-        <entry>right</entry>
+        <entry>(n/a)</entry>
         <entry><literal>yield</literal></entry>
         <entry>
          <link linkend="control-structures.yield">yield</link>
         </entry>
+       </row>
+       <row>
+        <entry>(n/a)</entry>
+        <entry><literal>print</literal></entry>
+        <entry><function>print</function></entry>
        </row>
        <row>
         <entry>left</entry>
