Fix other typos outside of php module docs
Patch provided by tandre@php.net.


git-svn-id: https://svn.php.net/repository/phpdoc/en/trunk@349711 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/exceptions.xml
+++ b/language/exceptions.xml
@@ -268,7 +268,7 @@ class MyException extends Exception
     If a &return; statement is encountered inside either the &try; or the &catch; blocks,
     the &finally; block will still be executed. Moreover, the &return; statement is
     evaluated when encountered, but the result will be returned after the &finally; block
-    is executed. Additionaly, if the &finally; block also contains a &return; statement,
+    is executed. Additionally, if the &finally; block also contains a &return; statement,
     the value from the &finally; block is returned.
    </para>
   </simplesect>
