Update examples for PHP 5+
git-svn-id: https://svn.php.net/repository/phpdoc/en/trunk@349734 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/variables.xml
+++ b/language/variables.xml
@@ -526,12 +526,14 @@ function foo(){
 <?php
 function test_global_ref() {
     global $obj;
-    $obj = &new stdclass;
+    $new = new stdclass;
+    $obj = &$new;
 }
 
 function test_global_noref() {
     global $obj;
-    $obj = new stdclass;
+    $new = new stdclass;
+    $obj = $new;
 }
 
 test_global_ref();
@@ -546,9 +548,11 @@ var_dump($obj);
    &example.outputs;
 
    <screen>
+<![CDATA[
 NULL
-object(stdClass)(0) {
+object(stdClass)#1 (0) {
 }
+]]>
    </screen>
 
    <simpara>
@@ -566,10 +570,15 @@ function &get_instance_ref() {
     echo 'Static object: ';
     var_dump($obj);
     if (!isset($obj)) {
+        $new = new stdclass;
         // Assign a reference to the static variable
-        $obj = &new stdclass;
+        $obj = &$new;
     }
-    $obj->property++;
+    if (!isset($obj->property)) {
+        $obj->property = 1;
+    } else {
+        $obj->property++;
+    }
     return $obj;
 }
 
@@ -579,10 +588,15 @@ function &get_instance_noref() {
     echo 'Static object: ';
     var_dump($obj);
     if (!isset($obj)) {
+        $new = new stdclass;
         // Assign the object to the static variable
-        $obj = new stdclass;
+        $obj = $new;
     }
-    $obj->property++;
+    if (!isset($obj->property)) {
+        $obj->property = 1;
+    } else {
+        $obj->property++;
+    }
     return $obj;
 }
 
@@ -597,14 +611,16 @@ $still_obj2 = get_instance_noref();
    </informalexample>
    &example.outputs;
    <screen>
+<![CDATA[
 Static object: NULL
 Static object: NULL
 
 Static object: NULL
-Static object: object(stdClass)(1) {
+Static object: object(stdClass)#3 (1) {
   ["property"]=>
   int(1)
 }
+]]>
    </screen>
 
    <simpara>
