Document SSL context option security_level
git-svn-id: https://svn.php.net/repository/phpdoc/en/trunk@350049 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/context/ssl.xml
+++ b/language/context/ssl.xml
@@ -275,6 +275,22 @@
       </para>
      </listitem>
     </varlistentry>
+    <varlistentry xml:id="context.ssl.security-level">
+     <term>
+      <parameter>security_level</parameter>
+      <type>integer</type>
+     </term>
+     <listitem>
+      <para>
+       Sets the security level. If not specified the library default security level is used.
+       The security levels are described in 
+       <link xlink:href="&url.openssl.security-level;">SSL_CTX_get_security_level(3)</link>.
+      </para>
+      <para>
+       Available as of PHP 7.2.0 and OpenSSL 1.1.0.
+      </para>
+     </listitem>
+    </varlistentry>
    </variablelist>
   </para>
  </refsect1><!-- }}} -->
@@ -291,6 +307,12 @@
       </row>
      </thead>
      <tbody>
+      <row>
+       <entry>7.2.0</entry>
+       <entry>
+        Added <parameter>security_levels</parameter>. Requires OpenSSL &gt;= 1.1.0.
+       </entry>
+      </row>
       <row>
        <entry>5.6.0</entry>
        <entry>
