--- a/language/types/integer.xml
+++ b/language/types/integer.xml
@@ -235,7 +235,7 @@ var_dump(round(25/7));  // float(4)
     If the float is beyond the boundaries of <type>integer</type> (usually
     <literal>+/- 2.15e+9 = 2^31</literal> on 32-bit platforms and
     <literal>+/- 9.22e+18 = 2^63</literal> on 64-bit platforms other than
-    Windows), the result is undefined, since the <type>float</type> doesn't
+    Windows prior to PHP 7), the result is undefined, since the <type>float</type> doesn't
     have enough precision to give an exact <type>integer</type> result. No
     warning, not even a notice will be issued when this happens!
    </para>
