Fix #79901: Wrong Link
Clarify that this is about *error* types.

git-svn-id: https://svn.php.net/repository/phpdoc/en/trunk@350218 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/errors/basics.xml
+++ b/language/errors/basics.xml
@@ -12,7 +12,7 @@
 
  <para>
   Every error that PHP generates includes a type. A
-  <link linkend="errorfunc.constants">list of these types</link> is available,
+  <link linkend="errorfunc.constants">list of these error types</link> is available,
   along with a short description of their behaviour and how they can be
   caused.
  </para>
