Remove duplicated word
git-svn-id: https://svn.php.net/repository/phpdoc/en/trunk@350292 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/predefined/closure/bind.xml
+++ b/language/predefined/closure/bind.xml
@@ -49,7 +49,7 @@
     <term><parameter>newscope</parameter></term>
     <listitem>
      <para>
-      The class scope to which associate the closure is to be associated, or
+      The class scope to which the closure is to be associated, or
       'static' to keep the current one. If an object is given, the type of the
       object will be used instead. This determines the visibility of protected
       and private methods of the bound object.
