Fix #75466: Undocumented Backward Compatibility Break from 7.0 to 7.1
git-svn-id: https://svn.php.net/repository/phpdoc/en/trunk@350302 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/functions.xml
+++ b/language/functions.xml
@@ -1048,6 +1048,12 @@ $newref =& returns_reference();
    </para>
 
    <para>
+    As of PHP 7.1.0, return statements without an argument trigger <constant>E_COMPILE_ERROR</constant>,
+    unless the return type is <type>void</type>, in which case return statements
+    with an argument trigger that error.
+   </para>
+
+   <para>
     As of PHP 7.1.0, return values can be marked as nullable by prefixing the
     type name with a question mark (<literal>?</literal>). This signifies that
     the function returns either the specified type or &null;.
