Fix #77948: Wrong Namespaces FAQ item interpretation/explanation
git-svn-id: https://svn.php.net/repository/phpdoc/en/trunk@350306 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/namespaces.xml
+++ b/language/namespaces.xml
@@ -1132,7 +1132,7 @@ A\B::foo();   // calls method "foo" of class "B" from namespace "A\A"
    <orderedlist>
     <listitem>
      <simpara>
-      <link linkend="language.namespaces.faq.conflict">Import names cannot conflict with
+      <link linkend="language.namespaces.faq.conflict">Import names must not conflict with
       classes defined in the same file.</link>
      </simpara>
     </listitem>
@@ -1401,7 +1401,7 @@ $b = INI_ALL; // sets $b to value of global constant "INI_ALL"
    </para>
   </sect2>
   <sect2 xml:id="language.namespaces.faq.conflict">
-   <title>Import names cannot conflict with classes defined in the same file.</title>
+   <title>Import names must not conflict with classes defined in the same file.</title>
    <para>
     The following script combinations are legal:
     <informalexample>
